--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.ru.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.ru.po
@@ -1,9 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: \n"
+"Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
+"Language-Team: \n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: ideutilspkgstrconsts.lisafilealreadyexistsreplaceit
 #, object-pascal-format
@@ -314,6 +320,10 @@ msgstr "Бразильский португальский"
 #: ideutilspkgstrconsts.rslanguagerussian
 msgid "Russian"
 msgstr "Русский"
+
+#: ideutilspkgstrconsts.rslanguagesinhala
+msgid "Sinhala"
+msgstr "Сингальский"
 
 #: ideutilspkgstrconsts.rslanguageslovak
 msgid "Slovak"
