--- a/components/pochecker/languages/pocheckerconsts.ru.po
+++ b/components/pochecker/languages/pocheckerconsts.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"X-Generator: Poedit 2.4.3\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: pocheckerconsts.rspochecker
 msgid "Check PO Files ..."
@@ -102,6 +102,10 @@ msgstr "Бразильский португальский"
 #: pocheckerconsts.rs_lang_ru
 msgid "Russian"
 msgstr "Русский"
+
+#: pocheckerconsts.rs_lang_si
+msgid "Sinhala"
+msgstr "Сингальский"
 
 #: pocheckerconsts.rs_lang_sk
 msgid "Slovak"
