IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -16886,7 +16886,7 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr ""
 
 #: lazarusidestrconsts.lisselected
