--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -17372,7 +17372,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Selecciona els fitxers de formes Delphi (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
