--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -17141,7 +17141,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Vybrat soubor formuláře Delphi (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
