--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -16877,7 +16877,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Delphi-Formulardatei (*.dfm) auswählen"
 
 #: lazarusidestrconsts.lisselected
