--- a/languages/lazaruside.es.po
+++ b/languages/lazaruside.es.po
@@ -17253,7 +17253,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Seleccionar desde archivos Delphi (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
