--- a/languages/lazaruside.fi.po
+++ b/languages/lazaruside.fi.po
@@ -16954,7 +16954,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Valitse Delphi form (lomake) tiedosto (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
