--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -17836,7 +17836,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "בחר טפסים של דלפי (dfm.*)"
 
 #: lazarusidestrconsts.lisselected
