--- a/languages/lazaruside.hu.po
+++ b/languages/lazaruside.hu.po
@@ -17068,7 +17068,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Válasszon Delphi form fájlokat (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
