--- a/languages/lazaruside.id.po
+++ b/languages/lazaruside.id.po
@@ -17536,7 +17536,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Pilih form Delphi dari file (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
