--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -17272,7 +17272,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Seleziona file form Delphi (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
