--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -17260,7 +17260,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Delphiフォームファイル (*.dfm)を選択"
 
 #: lazarusidestrconsts.lisselected
