--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -17438,7 +17438,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Selecteer Delphi form bestanden (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
