--- a/languages/lazaruside.pl.po
+++ b/languages/lazaruside.pl.po
@@ -17203,7 +17203,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Wybierz formularze Delphi (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
