--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -17026,7 +17026,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Zvoľte súbory formulárov Delphi (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
