--- a/languages/lazaruside.uk.po
+++ b/languages/lazaruside.uk.po
@@ -17027,7 +17027,9 @@ msgid "Select build mode"
 msgstr ""
 
 #: lazarusidestrconsts.lisselectdfmfiles
-msgid "Select Delphi form files (*.dfm)"
+#, fuzzy
+#| msgid "Select Delphi form files (*.dfm)"
+msgid "Select Delphi form files (*.dfm|*.fmx)"
 msgstr "Виберіть файли форм Delphi (*.dfm)"
 
 #: lazarusidestrconsts.lisselected
